<resources>
    <string name="app_name">Online Shopping Android</string>
    <string name="str_confirm_delete">Are you sure you want to delete %s from your shopping list</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_total_amount">Total Amount: %d</string>
    <string name="str_cart">Cart</string>
    <string name="sign_in_your_account">Sign In your account</string>
    <string name="submit_details_btn">Submit Details</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_text">Fill in the following user details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="payment_success_text">Payment Success</string>
    <string name="total_bill">Total Bill: %d Rs</string>
    <string name="Quantity">Quantity: %d</string>
    <string name="Product">Product: %s</string>
    <string name="Price">Price: %d</string>
    <string name="Description">Description: %s</string>
    <string name="item_detail_str">Item Detail</string>
    <string name="in_stock_str">In Stock</string>
    <string name="out_of_stock_str">Out of Stock</string>
    <string name="Broccoli">Broccoli</string>
    <string name="broccoli_des_str">With a shape resembling that of a cauliflower, Broccoli have clusters of small, tight flower heads. These heads turn bright green on cooking and tastes slightly bitter.</string>
    <string name="carrot_des_str">A popular sweet-tasting root vegetable, Carrots are narrow and cone shaped. They have thick, fleshy, deeply colored root, which grows underground, and feathery green leaves that emerge above the ground.</string>
    <string name="cucumber_des_str">With high water content and crunchy flesh, Cucumbers have striped, light to dark green coloured skin that is edible.</string>
    <string name="capsicum_des_str">Leaving a moderately pungent taste on the tongue, Green capsicums, also known as green peppers are bell shaped, medium-sized fruit pods. They have thick and shiny skin with a fleshy texture inside.</string>
    <string name="tomato_des_str">Tomato Hybrids are high-quality fruits compared to desi, local tomatoes. They contain numerous edible seeds and are red in colour due to lycopene, an anti-oxidant.</string>
    <string name="Carrot">Carrot</string>
    <string name="Cucumber">Cucumber</string>
    <string name="Capsicum">Capsicum</string>
    <string name="Tomato">Tomato</string>
    <string name="payment_failed_str">Payment Failed</string>
    <string name="payment_info_alert_str">Payment Information</string>
    <string name="payment_alert_msg_str">Congratulation!!  Now choose Success for successful transaction</string>
    <string name="payment_success_str">Success</string>
    <string name="payment_failure_str">Failure</string>
    <string name="cart_total_amt_str">Total Amount: %d</string>
    <string name="Amount">Amount: %d</string>
    <string name="product_initial">Product: Broccoli</string>
    <string name="amount_initial">Amount: 0</string>
    <string name="total_amount_initial">Total Amount: 0</string>
    <string name="place_your_order_btn_str">Place Your Order</string>
    <string name="failure_txt_str">For successful transaction click on Place Your Order Button in Cart list and choose success from the pop-up menu.</string>
    <string name="move_to_cart_btn_str">Move To Cart</string>
    <string name="failure_msg_str">Sorry your transaction has been unsuccessful!! Please try again.</string>
    <string name="home_str">Home</string>
    <string name="price_initial_str">Price: 50</string>
    <string name="quantity_initial_str">Quantity: 0</string>
    <string name="description_initial_str">Description:</string>
    <string name="qty_add_str">+</string>
    <string name="qty_sub_str">-</string>
    <string name="qty_chng_initial_str">0</string>
    <string name="alert_popup_str">Alert</string>
    <string name="alert_popup_msg_str">Message</string>
    <string name="success_msg_str">Your order is successfully placed.</string>
    <string name="total_bill_initial_str">Total Bill: 0</string>
    <string name="continue_shopping_btn_str">Continue Shopping</string>
    <string name="sign_in_str">Sign In</string>
    <string name="sign_up_str">Sign Up</string>
    <string name="app_name_online_shopping">Online Shopping</string>
    <string name="sign_in">Sign In</string>
    <string name="profile_txt_str">Please fill in the user details</string>
    <string name="add_address_text_str">Please select delivery address</string>
    <string name="add_new_address_btn_str">Add New Address</string>
    <string name="profile">Profile</string>
</resources>
