<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signUpScreen"
    android:weightSum="10">
    <include
        layout="@layout/header_custom"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="532dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/signup_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/sign_up_text"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#F4A460"
                android:hint="@string/name"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:textColorHint="#F4A460" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#F4A460"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:textColorHint="#F4A460" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#F4A460"
                android:hint="@string/password"
                android:paddingStart="10dp"
                android:textColorHint="#F4A460"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/signup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#F4A460"
                android:hint="@string/confirm_password"
                android:paddingStart="10dp"
                android:textColorHint="#F4A460"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/signup_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#F4A460"
                android:hint="@string/delivery_address"
                android:paddingStart="10dp"
                android:textColorHint="#F4A460" />

            <EditText
                android:id="@+id/signup_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#F4A460"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textColorHint="#F4A460"
                android:maxLength="10"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4A460"
                android:text="@string/submit_details_btn"
                android:textSize="16sp"
                android:layout_margin="20dp"
                android:id="@+id/signup_submit_btn"
                android:layout_weight="2"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>