<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/homescreen_quantity_change">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty_add_str"
        android:textSize="20sp"
        android:id="@+id/increase_button"
        android:background="#F4A460"
        android:focusable="false"/>

    <TextView
        android:id="@+id/quantity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/qty_chng_initial_str"
        android:textSize="20sp"
        android:paddingVertical="5dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty_sub_str"
        android:background="#A9A9A9"
        android:textSize="20sp"
        android:id="@+id/decrease_button"
        android:focusable="false"/>

</LinearLayout>