<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileScreen"
    android:weightSum="10">
    <include
        layout="@layout/header_custom"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/profile_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/profile_txt_str"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingStart="10dp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/profile_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingStart="10dp"
                android:text="@string/delivery_address"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/profile_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:paddingStart="10dp"
                android:text="@string/mobile_number"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

    <TextView
        android:id="@+id/add_address_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/add_address_text_str"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="28sp"
        android:layout_weight="1"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingTop="10dp"
        android:layout_marginHorizontal="10dp">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/add_adress_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#F4A460"
        android:hint="@string/add_new_address_btn_str"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textColorHint="#F4A460" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4A460"
        android:text="@string/add_new_address_btn_str"
        android:textSize="16sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/add_address_btn"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4A460"
        android:text="@string/submit_details_btn"
        android:textSize="16sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/profile_submit_btn"
        android:layout_weight="1"/>

</LinearLayout>