<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFD5"
    android:id="@+id/success_screen">
    <include
        layout="@layout/header_custom"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/success_msg_str"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textColor="#008000"
        android:paddingTop="15dp"
        android:paddingHorizontal="15dp"
        android:id="@+id/order_placed_text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:paddingTop="15dp"
        android:paddingHorizontal="15dp"
        android:textColor="#000000"
        android:id="@+id/success_delivery_address"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_bill_initial_str"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:padding = "15dp"
        android:textColor="#000000"
        android:id="@+id/success_total_amount"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mySuccessListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_shopping_btn_str"
        android:background="#F4A460"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/success_shopping_button"
        />
</LinearLayout>