<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homescreen"
    android:weightSum="10">
    <include
        layout="@layout/header_custom"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/payment_fail"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/failure_msg_str"
        android:textSize="28sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#DA3D32"
        android:padding="15dp"
        android:gravity="start|center_vertical"
        android:layout_weight="4"
        />

    <TextView
        android:id="@+id/stockTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/failure_txt_str"
        android:textSize="18sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#008000"
        android:padding="15dp"
        android:gravity="start|center_vertical"
        android:layout_weight="5.4"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4A460"
        android:text="@string/move_to_cart_btn_str"
        android:textSize="18sp"
        android:layout_weight="0.5"
        android:id="@+id/failure_button"/>
</LinearLayout>