<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/success_list_container"
    android:background="#FFFFFF"
    android:padding="5dp"
    android:layout_marginBottom="10dp"
    >

    <ImageView
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintWidth_percent="0.45"
        android:id="@+id/success_image"
        android:scaleType="fitXY"
        android:src="@drawable/broccoli"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/success_sub_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignStart="@id/success_image"
        android:orientation="vertical"
        android:paddingLeft="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/success_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.50"
        app:layout_constraintHeight_percent="1">

        <TextView
            android:id="@+id/success_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:text="@string/product_initial"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/success_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_initial_str"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/success_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_initial_str"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/success_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_initial"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>